--- a/04_HTML/Exercices/exo4/exo.html
+++ b/04_HTML/Exercices/exo4/exo.html
@@ -9,6 +9,19 @@
     <h1 id="hautPage">Mon premier blog</h1>
 
     <hgroup>
+        <h2>Ajout d'un formulaire de contact</h2>
+        <i>Publié le 02 septembre 2023, 11h10</i>
+    </hgroup>
+
+    <p>
+       <b> Nouveau sur le blog ! </b> 🎉 J'ai tout juste inclus une toute nouvelle section "Contact" pour rester en contact plus facilement. Un formulaire est en place, prêt à recueillir vos idées et réflexions. J'attends avec impatience nos échanges et les discussions à venir. N'hésitez pas à me faire part de vos pensées ! 📬🖋
+    </p>
+
+    <p>
+        <a href="./contact.html">Me contacter</a>
+    </p>
+
+    <hgroup>
         <h2>Ouverture de ma chaîne Twitch <img src="./assets/img/twitch-logo-png.png" width="40" alt="logo twitch"> </h2>
         <i>Publié le 01 septembre 2023, 13h37.</i>
     </hgroup>
@@ -54,9 +67,9 @@
 
     <h2 id="twitch">Ma chaîne Twitch</h2>
 
-    <p>
+    <figure>
         <img src="./assets/img/twitch-logo-svg.svg" width="250" alt="logo twitch">
-    </p>
+    </figure>
     
 
     <a href="./horaires.html"><button>Mes horaires</button></a>
