--- a/05_CSS/Exercices/exo4/index.html
+++ b/05_CSS/Exercices/exo4/index.html
@@ -17,7 +17,8 @@
                 <h3>column a</h3>
             </article>
             <article>
-                <h3>column b</h3>
+                <h3>It's my new country!!!!</h3>               
+
             </article>
             <article>
                 <h3>column c</h3>
