exo 31 et 32 js

--- a/07_JavaScript/Exercices/exo31/index.html
+++ b/07_JavaScript/Exercices/exo31/index.html
@@ -7,6 +7,19 @@
     <script type="module" src="./main.js"></script>
 </head>
 <body>
+
+    <table id="tableau">
+        <thead>
+          <tr>
+            <th>Nom</th>            
+            <th>Prénom</th>
+            <th>Date de Naissance</th>
+          </tr>
+        </thead>
+        <tbody>
+          
+        </tbody>
+      </table>
     
 </body>
 </html>
