--- a/07_JavaScript/Exercices/exo32/correction/index.html
+++ b/07_JavaScript/Exercices/exo32/correction/index.html
@@ -11,7 +11,7 @@
     <div style="display: none" class="modal-background">
       <div class="modal-content">
         <div class="modal-header">
-          <h3>Ajouter un Chat</h3>
+          <h3><span class="form-mode">Ajouter</span> un Chat</h3>
           <button id="btn-modal-close">X</button>
         </div>
         <div class="modal-body">
@@ -29,7 +29,7 @@
               <input type="date" id="birthDate" name="birthDate" required />
             </div>
             <div>
-              <button>Ajouter</button>
+              <button><span class="form-mode">Ajouter</span></button>
             </div>
           </form>
         </div>
@@ -53,6 +53,14 @@
       <hr />
       <div>
         <button id="btn-add-cat">Ajouter un chat</button>
+      </div>
+      <div>
+        <select name="cat-sorting" id="cat-sorting">
+          <option value="id">Id</option>
+          <option selected value="name">Nom</option>
+          <option value="breed">Race</option>
+          <option value="birthDate">Date de naissance</option>
+        </select>
       </div>
     </main>
   </body>
